--- a/src/index.css
+++ b/src/index.css
@@ -2,26 +2,35 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Bakbak+One&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Inria+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Bakbak+One&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inria+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
 :root {
-
   /* background */
-  --background-color: #22092C;
+  --background-color: #22092c;
   --background-black: #00000033;
-  --border-color: #311B3B;
+  --border-color: #311b3b;
   --backgrond-trans: transparent;
-  --background-linear-gradient: linear-gradient(112.86deg, #47295C 39.86%, #C4528A 91.52%);
+  --background-linear-gradient: linear-gradient(
+    112.86deg,
+    #47295c 39.86%,
+    #c4528a 91.52%
+  );
 
   /* Font */
-  --font-primary: 'Bakbak One', cursive;
-  --font-secondary: 'Poppins', sans-serif;
-  --font-third: 'Inria Sans', sans-serif;
+  --font-primary: "Bakbak One", cursive;
+  --font-secondary: "Poppins", sans-serif;
+  --font-third: "Inria Sans", sans-serif;
 
   /* Text */
-  --primary-text: #FFFFFF;
+  --primary-text: #ffffff;
 
   /* Font Size */
   --font-6xl: 70px;
@@ -30,7 +39,6 @@
   --font-base: 18px;
   --font-sm: 16px;
   --font-xs: 14px;
-
 
   /* Line Height */
   --line-height-6xl: 70px;
@@ -51,7 +59,6 @@ body {
 }
 
 @layer components {
-
   h1 {
     @apply font-bakbak text-font6xl leading-lineHeight6xl;
   }
@@ -67,7 +74,6 @@ body {
   button {
     @apply font-inriasans text-fontBase font-bold leading-lineHeightSm3;
   }
-
 }
 
 @layer utilities {
@@ -95,19 +101,23 @@ body {
   }
 
   .border-Line::after {
-    content: '';
+    content: "";
     position: absolute;
     top: 0;
     bottom: 0;
     right: 0;
     height: 230px;
-    border-right: 2px solid #311B3B;
+    border-right: 2px solid #311b3b;
     z-index: 1;
   }
 
   .gradient-border {
     border: 1px solid;
-    border-image-source: linear-gradient(112.86deg, #47295C 39.86%, #C4528A 91.52%);
+    border-image-source: linear-gradient(
+      112.86deg,
+      #47295c 39.86%,
+      #c4528a 91.52%
+    );
     border-image-slice: 1;
   }
 }
@@ -120,7 +130,7 @@ body {
   border: 1.58px solid #372048;
   border-radius: 10px;
   padding: 13px 14px;
-  background: #110C11;
+  background: #110c11;
 }
 
 .bannerImages1 {
