--- a/src/index.css
+++ b/src/index.css
@@ -18,11 +18,9 @@
   --background-black: #00000033;
   --border-color: #311b3b;
   --backgrond-trans: transparent;
-  --background-linear-gradient: linear-gradient(
-    112.86deg,
-    #47295c 39.86%,
-    #c4528a 91.52%
-  );
+  --background-linear-gradient: linear-gradient(112.86deg,
+      #47295c 39.86%,
+      #c4528a 91.52%);
 
   /* Font */
   --font-primary: "Bakbak One", cursive;
@@ -67,6 +65,10 @@ body {
     @apply font-bakbak text-font6xl leading-lineHeight6xl;
   }
 
+  h3 {
+    @apply font-poppins text-fontBase leading-lineHeightBase font-bold;
+  }
+
   p {
     @apply font-poppins text-fontBase leading-lineHeightBase;
   }
@@ -107,19 +109,45 @@ body {
     bottom: 0;
     right: 0;
     height: 230px;
-    border-right: 2px solid #311b3b;
+    border-right: 2px solid var(--border-color);
     z-index: 1;
   }
 
   .gradient-border {
-    border: 1px solid;
-    border-image-source: linear-gradient(
-      112.86deg,
-      #47295c 39.86%,
-      #c4528a 91.52%
-    );
-    border-image-slice: 1;
+    position: relative;
   }
+
+  .gradient-border::before {
+    content: "";
+    position: absolute;
+    inset: 0;
+    border-radius: 8px;
+    padding: 1px;
+    background: var(--background-linear-gradient);
+    -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
+    -webkit-mask-composite: xor;
+  }
+
+  .background-grident {
+    background: linear-gradient(112.86deg,
+        #47295c 39.86%,
+        #c4528a 91.52%);
+    border-radius: 8px;
+    box-shadow: 0px 4px 110.5px 0px #00000040;
+  }
+
+  .active {
+    background: linear-gradient(112.86deg, #c4528a 39.86%, #47295c 91.52%);
+    box-shadow: 0px 8px 150px 0px #00000080;
+    border-radius: 8px;
+    transition: all var(--background-linear-gradient) .5s ease-in;
+  }
+
+  .abc {
+    backdrop-filter: blur(103.4000015258789px);
+    background: #FFFFFF33 20%;
+  }
+
 }
 
 .border-Line:last-child::after {
