--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@
 :root {
   /* background */
   --background-color: #22092c;
+  --background-color-sec: #241228;
   --background-black: #00000033;
   --border-color: #311b3b;
   --backgrond-trans: transparent;
@@ -74,6 +75,10 @@ body {
 
   p {
     @apply font-poppins text-fontBase leading-lineHeightBase;
+  }
+
+  span {
+    @apply font-poppins text-fontSm leading-lineHeightSm3;
   }
 
   button {
