--- a/src/index.css
+++ b/src/index.css
@@ -19,11 +19,17 @@
   --background-black: #00000033;
   --border-color: #311b3b;
   --backgrond-trans: transparent;
-  --background-linear-gradient: linear-gradient(112.86deg,
-      #47295c 39.86%,
-      #c4528a 91.52%);
-  --background-linear-gradient-sec: linear-gradient(171.03deg, rgba(34, 9, 44, 0) -0.1%, #22092C 85.39%),
-    linear-gradient(102.42deg, rgba(34, 9, 44, 0) -7.07%, #22092C 86.05%);
+  --background-linear-gradient: linear-gradient(
+    112.86deg,
+    #47295c 39.86%,
+    #c4528a 91.52%
+  );
+  --background-linear-gradient-sec: linear-gradient(
+      171.03deg,
+      rgba(34, 9, 44, 0) -0.1%,
+      #22092c 85.39%
+    ),
+    linear-gradient(102.42deg, rgba(34, 9, 44, 0) -7.07%, #22092c 86.05%);
 
   /* Font */
   --font-primary: "Bakbak One", cursive;
@@ -132,15 +138,14 @@ body {
     border-radius: 8px;
     padding: 1px;
     background: var(--background-linear-gradient);
-    -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
+    -webkit-mask: linear-gradient(#fff 0 0) content-box,
+      linear-gradient(#fff 0 0);
     -webkit-mask-composite: xor;
     z-index: -1;
   }
 
   .background-grident {
-    background: linear-gradient(112.86deg,
-        #47295c 39.86%,
-        #c4528a 91.52%);
+    background: linear-gradient(112.86deg, #47295c 39.86%, #c4528a 91.52%);
     border-radius: 8px;
     box-shadow: 0px 4px 110.5px 0px #00000040;
   }
@@ -149,12 +154,14 @@ body {
     background: var(--background-linear-gradient);
     box-shadow: 0px 8px 150px 0px #00000080;
     border-radius: 8px;
-    transition: all var(--background-linear-gradient) .5s ease-in;
+    transition: all var(--background-linear-gradient) 0.5s ease-in;
   }
 
-  .abc {
-    backdrop-filter: blur(103.4000015258789px);
-    background: #FFFFFF33 20%;
+  .blur-bg {
+    background: #ffffff33;
+    backdrop-filter: blur(20.4px);
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
   }
 
   .border-underline {
