--- a/src/index.css
+++ b/src/index.css
@@ -143,7 +143,8 @@ body {
     border-radius: 8px;
     padding: 1px;
     background: var(--background-linear-gradient);
-    -webkit-mask: linear-gradient(#fff 0 0) content-box,
+    -webkit-mask:
+      linear-gradient(#fff 0 0) content-box,
       linear-gradient(#fff 0 0);
     -webkit-mask-composite: xor;
     z-index: -1;
@@ -160,7 +161,8 @@ body {
     border-radius: 50%;
     padding: 1px;
     background: var(--background-linear-gradient);
-    -webkit-mask: linear-gradient(#fff 0 0) content-box,
+    -webkit-mask:
+      linear-gradient(#fff 0 0) content-box,
       linear-gradient(#fff 0 0);
     -webkit-mask-composite: xor;
     z-index: -1;
@@ -177,7 +179,8 @@ body {
     border-radius: 42px;
     padding: 1px;
     background: var(--background-linear-gradient);
-    -webkit-mask: linear-gradient(#fff 0 0) content-box,
+    -webkit-mask:
+      linear-gradient(#fff 0 0) content-box,
       linear-gradient(#fff 0 0);
     -webkit-mask-composite: xor;
     z-index: -1;
