--- a/src/index.css
+++ b/src/index.css
@@ -90,6 +90,53 @@ body {
   button {
     @apply font-inriasans text-fontBase font-bold leading-lineHeightSm3;
   }
+
+  .banner {
+    position: relative;
+  }
+
+  .banner::before {
+    content: "";
+    position: absolute;
+    background: linear-gradient(180deg, #776ae3 0%, #551863 100%);
+    border-radius: 50%;
+    filter: blur(120px);
+    width: 231px;
+    height: 231px;
+    z-index: -1;
+    bottom: 0;
+    left: 0;
+  }
+
+  .journey {
+    position: relative;
+  }
+
+  .journey::before {
+    content: "";
+    position: absolute;
+    background: linear-gradient(180deg, #776ae3 0%, #551863 100%);
+    border-radius: 50%;
+    filter: blur(120px);
+    width: 180px;
+    height: 180px;
+    z-index: -1;
+    top: 0;
+    left: 0;
+  }
+
+  .journey::after {
+    content: "";
+    position: absolute;
+    background: linear-gradient(180deg, #776ae3 0%, #551863 100%);
+    border-radius: 50%;
+    filter: blur(120px);
+    width: 180px;
+    height: 180px;
+    z-index: -1;
+    top: 0;
+    right: 0;
+  }
 }
 
 @layer utilities {
@@ -134,18 +181,17 @@ body {
 
   .gradient-border {
     position: relative;
-      border-radius: 8px;
+    border-radius: 8px;
   }
 
   .gradient-border::before {
     content: "";
     position: absolute;
     inset: 0;
-    border-radius: 8px;
+    border-radius: 12px;
     padding: 1px;
     background: var(--background-linear-gradient);
-    -webkit-mask:
-      linear-gradient(#fff 0 0) content-box,
+    -webkit-mask: linear-gradient(#fff 0 0) content-box,
       linear-gradient(#fff 0 0);
     -webkit-mask-composite: xor;
     z-index: -1;
@@ -154,7 +200,7 @@ body {
   .gradient-border:hover {
     border-radius: 8px;
     background-color: #7a3d66;
-    transition: all .3s ease-in-out;
+    transition: all 0.3s ease-in-out;
   }
 
   .gradient-border-varient-sec {
@@ -168,8 +214,7 @@ body {
     border-radius: 50%;
     padding: 1px;
     background: var(--background-linear-gradient);
-    -webkit-mask:
-      linear-gradient(#fff 0 0) content-box,
+    -webkit-mask: linear-gradient(#fff 0 0) content-box,
       linear-gradient(#fff 0 0);
     -webkit-mask-composite: xor;
     z-index: -1;
@@ -186,8 +231,7 @@ body {
     border-radius: 42px;
     padding: 1px;
     background: var(--background-linear-gradient);
-    -webkit-mask:
-      linear-gradient(#fff 0 0) content-box,
+    -webkit-mask: linear-gradient(#fff 0 0) content-box,
       linear-gradient(#fff 0 0);
     -webkit-mask-composite: xor;
     z-index: -1;
